--- a/greedy_bank/src/css/App.css
+++ b/greedy_bank/src/css/App.css
@@ -15,10 +15,6 @@
   margin: 0 auto;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
 
 .App-header {
   background-color: #282c34;
@@ -35,15 +31,6 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .button
 {
   background-color: #54E3C1;
@@ -52,7 +39,6 @@
   border-radius: 4px;
   font-weight: 500;
   font-size: 16px;
-  margin: 20px 0 0 0;
   border: none;
   transition: 0.3s;
 }
@@ -66,10 +52,20 @@
   font-size: 16px;
   margin: 10px 0 0 4px;
   border: none;
-
   transition: 0.3s;
 }
-
+.updateBalaceButton {
+  background-color: #54E3C1;
+  color: white;
+  padding: 12px 20px;
+  border-radius: 4px;
+  font-weight: 500;
+  width: 120px;
+  font-size: 16px;
+  margin: 10px 10px 0 0;
+  border: none;
+  transition: 0.3s;
+}
 .button:hover {
   -moz-box-shadow: 1px 1px 10px #b5b5b5;
   -webkit-box-shadow: 1px 1px 10px #b5b5b5;
